fix: align llm deploy modal actions

--- a/src/components/CreateComponentModal/index.less
+++ b/src/components/CreateComponentModal/index.less
@@ -657,6 +657,17 @@
   color: @warning-color;
 }
 
+.llmRepositoryAction {
+  display: flex;
+  justify-content: flex-end;
+  width: 112px;
+  flex-shrink: 0;
+}
+
+.llmRepositoryActionButton {
+  min-width: 98px;
+}
+
 .llmSelectItem {
   display: flex;
   align-items: flex-start;
